# Tuesday

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Project_Description.docx  README.md  face_detection.py  package.xml  package.xml~  rescale.py  shapes_text.py  start.sh
Opencv_testing/opencv_ros/: move_arm.py  opencv_find.py  opencv_hand_tracker.py
Opencv_testing/tutorial/: basic_opencv.py  object_detection.py  transformations.py
Opencv_testing/tutorial/images.names/: ssd_mobilenet_v3_large_images.pbtxt
launch/: Tuesday.launch  my_id_robot.launch  my_id_robot.launch~  tuesday.launch~
msg/: Num.msg~  Open.msg  Open.msg~
scripts/: #servo.py#  detect.py  detect.py~  dynamixel320lib.py~  move_arm.py  move_arm.py~  servo-simple.py  servo-simple.py~  servo.py  servo.py~
src/: #main_object.cpp#  find_object_opencv.cpp  find_object_opencv.cpp~  find_object_opencv.recognize  id_continuous.c  id_continuous.cpp  main_id_subscriber.cpp  main_id_subscriber.cpp~  main_object.cpp~  main_opencv_object.cpp  main_opencv_object.cpp~  servo_node.cpp~
srv/: FindObjectOpenCV.srv  FindObjectOpenCV.srv~
